@@ -1,4 +1,4 @@
-﻿// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+﻿// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -12,18 +12,22 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
+
 #if !(SILVERLIGHT || CLIENTPROFILE)
+
 namespace Castle.MicroKernel.Lifestyle
 {
 	using System;
 	using System.Collections.Generic;
 	using System.Linq;
+	using System.Text;
+	using System.Threading;
 	using System.Web;
 
 	public class PerWebRequestLifestyleModule : IHttpModule
 	{
 		private const string PerRequestEvict = "PerRequestLifestyleManager_Evict";
-		private static bool initialized;
+		private static int initialized;
 
 		public void Dispose()
 		{
@@ -31,8 +35,10 @@ namespace Castle.MicroKernel.Lifestyle
 
 		public void Init(HttpApplication context)
 		{
-			initialized = true;
-			context.EndRequest += Application_EndRequest;
+			if (Interlocked.CompareExchange(ref initialized, 1, 0) != 1)
+			{
+				context.EndRequest += Application_EndRequest;
+			}
 		}
 
 		protected void Application_EndRequest(Object sender, EventArgs e)
@@ -54,9 +60,27 @@ namespace Castle.MicroKernel.Lifestyle
 			application.Context.Items.Remove(PerRequestEvict);
 		}
 
-		internal static bool Initialized
+		public static void EnsureInitialized()
 		{
-			get { return initialized; }
+			if (initialized == 1)
+			{
+				return;
+			}
+			var message = new StringBuilder();
+			message.AppendLine("Looks like you forgot to register the http module " + typeof(PerWebRequestLifestyleModule).FullName);
+			message.AppendLine("To fix this add");
+			message.AppendLine("<add name=\"PerRequestLifestyle\" type=\"Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor\" />");
+			message.AppendLine("to the <httpModules> section on your web.config.");
+			if (HttpRuntime.UsingIntegratedPipeline)
+			{
+				message.AppendLine(
+					"Windsor also detected you're running IIS in Integrated Pipeline mode. This means that you also need to add the module to the <modules> section under <system.webServer>.");
+			}
+#if !DOTNET35
+			message.AppendLine("Alternatively make sure you have " + PerWebRequestLifestyleModuleRegistration.MicrosoftWebInfrastructureDll +
+			                   " assembly in your GAC (it is installed by ASP.NET MVC3 or WebMatrix) and Windsor will be able to register the module automatically without having to add anything to the config file.");
+#endif
+			throw new Exception(message.ToString());
 		}
 
 		internal static void RegisterForEviction(PerWebRequestLifestyleManager manager, Burden burden)
@@ -75,4 +99,5 @@ namespace Castle.MicroKernel.Lifestyle
 		}
 	}
 }
+
 #endif
